# DeMoSeg_Slicer

./: README.md
BrainTumorDeMoSeg_Slicer/: Instructions.pptx
BrainTumorDeMoSeg_Slicer/BrainTumorDeMoSeg/: CMakeLists.txt
BrainTumorDeMoSeg_Slicer/BrainTumorDeMoSeg/BrainTumorDeMoSeg/: BrainTumorDeMoSeg.py  CMakeLists.txt  DeMoSeg.py
BrainTumorDeMoSeg_Slicer/BrainTumorDeMoSeg/BrainTumorDeMoSeg/Resources/UI/: BrainTumorDeMoSeg.ui
